rm: @implementations, groups..

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
@@ -49,10 +49,10 @@ services:
 
   oap-http-health-handler:
     implementation: oap.http.server.health.HealthHttpHandler
+    add-link: addProvider
     profile: http
     parameters:
-      providers:
-        - groups..HealthDataProvider
+      providers: []
 
   corsPolicy-generic:
     implementation: oap.http.cors.GenericCorsPolicy
