--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
@@ -4,14 +4,15 @@
   services {
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReference"
+      link-method = addLink2
       parameters {
-        ti = groups.field-reference.group1
+        ti = null
       }
     }
 
     ti1 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
-      group = group1
+      link = modules.this.m
     }
   }
 }
