--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
@@ -4,13 +4,13 @@
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
       parameters {
-        tis = [groups..ti1]
+        tis = []
       }
     }
 
     ti1 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
-      group = ti1
+      link = modules.this.m
       enabled = false
     }
   }
