--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references.conf
@@ -4,22 +4,8 @@
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
       parameters {
-        tis = [groups..fr1]
+        tis = []
       }
-    }
-
-    ti1 {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
-      group = fr1
-    }
-    ti2 {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl2"
-      group = fr1
-      enabled = false
-    }
-    ti3 {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl3"
-      group = fr1
     }
   }
 }
