--- a/oap-stdlib/src/test/resources/oap/http/server/health/HealthHttpHandlerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/http/server/health/HealthHttpHandlerTest/application.test.conf
@@ -1,8 +1,9 @@
+boot.main = oap-http-health-test
 profiles = [
   http
   http-plain
 ]
 services {
-  oap-http-listener-plain.parameters.port = ${TEST_HTTP_PORT}
-  oap-http-health-handler.parameters.secret = secret
+  oap.oap-http-listener-plain.parameters.port = ${TEST_HTTP_PORT}
+  oap.oap-http-health-handler.parameters.secret = secret
 }
