--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
         <oap.deps.maven.plexus-utils.version>3.3.0</oap.deps.maven.plexus-utils.version>
         <oap.deps.maven.plugin-build-helper.version>1.10</oap.deps.maven.plugin-build-helper.version>
         <oap.deps.maven.plugin-api.version>3.6.3</oap.deps.maven.plugin-api.version>
-        <oap.deps.maven.project.version>3.0-alpha-2</oap.deps.maven.project.version>
+        <oap.deps.maven.version>3.0-alpha-2</oap.deps.maven.version>
         <oap.deps.maven.plugin-annotations.version>3.6.0</oap.deps.maven.plugin-annotations.version>
         <oap.deps.maven.plugin-plugin.version>3.6.0</oap.deps.maven.plugin-plugin.version>
         <oap.deps.plugins.antlr4.version>4.8-1</oap.deps.plugins.antlr4.version>
