--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-project</artifactId>
-            <version>${oap.deps.maven.project.version}</version>
+            <version>${oap.deps.maven.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.codehaus.plexus</groupId>
