--- a/oap-stdlib/src/test/resources/oap/application/testng/KernelFixture/confd/fixture.conf
+++ b/oap-stdlib/src/test/resources/oap/application/testng/KernelFixture/confd/fixture.conf
@@ -1,1 +1,1 @@
-services.kernel-fixture-test.fixture-service.parameters.value = "from fixture"${TEST_PROPERTY}${TEST2_PROPERTY}
+services.kernel-fixture-test.fixture-service.parameters.value = "from fixture"${MY_TEST_PORT}
