add: Module#ext

--- a/oap-stdlib/src/test/resources/oap/application/KernelExtTest/module-ext.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelExtTest/module-ext.conf
@@ -1,10 +1,11 @@
-name = service-ext
+name = module-ext
 services {
   s1 {
     implementation = "oap.application.KernelExtTest$TestBean"
-    ws {
-      path = /p
-      p2 = string
-    }
   }
+}
+
+ws {
+  path = /p
+  p2 = string
 }
