add: Module#ext, Service#ext

--- a/oap-stdlib/src/test/resources/oap/application/KernelExtTest/module-ext.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelExtTest/module-ext.conf
@@ -2,10 +2,17 @@ name = module-ext
 services {
   s1 {
     implementation = "oap.application.KernelExtTest$TestBean"
+    ws {
+      path = /s
+      p2 = service
+    }
+  }
+  s2 {
+    implementation = "oap.application.KernelExtTest$TestBean"
   }
 }
 
 ws {
   path = /p
-  p2 = string
+  p2 = module
 }
