--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -5,13 +5,13 @@ services {
     profile = java-time
     implementation = oap.time.JavaTimeService
   }
-  
+
   oap-time-joda {
     name = oap-time
     profile = -java-time
     implementation = oap.time.JodaTimeService
   }
-  
+
   oap-http-apache-server {
     implementation = oap.http.server.apache.ApacheHttpServer
     profile = http
@@ -51,8 +51,7 @@ services {
       keystoreLocation = "/etc/oap/keystore.jks"
       keystorePassword = "changeit"
     }
-    supervision:
-      thread: true
+    supervision.thread = true
   }
 
   oap-http-listener-local {
