--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -99,14 +99,14 @@ services {
     implementation = oap.application.remote.Remote
     profile = remoting
     parameters {
-      //      port: 8980
+      //      port = 8980
       port = <change me>
       context = /remote/
       serialization = DEFAULT
       kernel = kernel.self
       timeout = 1m
-      supervision.supervise = true
     }
+    supervision.supervise = true
   }
 
   prometheus-jvm-exporter {
