--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -1,8 +1,13 @@
 {
   boot.main = oap-module-with-remoting
+
   profiles = [remoting, http]
+
   services {
-    oap.remoting.parameters.serialization = JSON
-    oap.remoting.parameters.private_network = true
+    oap {
+      remoting.parameters.port = 8980
+      remoting.parameters.serialization = JSON
+      remoting.parameters.private_network = true
+    }
   }
 }
