--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -38,6 +38,7 @@ services {
     parameters {
       port = <change me>
       server = modules.this.oap-http-server
+      backlog = 50
     }
     supervision.thread = true
   }
