oap.applications link with field->service format

--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
@@ -12,7 +12,9 @@
 
     ti1 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
-      link = modules.this.m
+      link {
+        ti = modules.this.m
+      }
     }
   }
 }
