--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
@@ -1,5 +1,5 @@
 {
-  name = field-references-unknown-interface 
+  name = field-references-unknown-interface
   services {
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
@@ -10,7 +10,9 @@
 
     ti1 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
-      link = modules.this.m
+      link {
+        tis = modules.this.m
+      }
       enabled = false
     }
   }
