--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references2.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references2.conf
@@ -4,16 +4,22 @@
   services {
     ti1 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
-      link = modules.field-references.m
+      link {
+        tis = modules.field-references.m
+      }
     }
     ti2 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl2"
-      link = modules.field-references.m
+      link {
+        tis = modules.field-references.m
+      }
       enabled = false
     }
     ti3 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl3"
-      link = modules.field-references.m
+      link {
+        tis = modules.field-references.m
+      }
     }
   }
 }
