--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/creference.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/creference.conf
@@ -1,14 +1,23 @@
 name = creference
 
 services {
-  links.implementation = "oap.application.KernelLinkImplementationsTest$TestCLinks"
+  links {
+    implementation = "oap.application.KernelLinkImplementationsTest$TestCLinks"
+    parameters.link = modules.this.link1
+    supervision.supervise = true
+  }
+  
   link1 {
     implementation = "oap.application.KernelLinkImplementationsTest$TestCLink"
     link.testLink = modules.this.links
+    supervision.supervise = true
   }
+  
   link2 {
     implementation = "oap.application.KernelLinkImplementationsTest$TestCLink"
     link.links = modules.this.links
     parameters.link = modules.this.link1
+    supervision.supervise = true
   }
+
 }
