fixture design w/o inclusion

--- a/oap-stdlib/src/test/resources/oap/application/testng/KernelFixtureTest/application.fixture.conf
+++ b/oap-stdlib/src/test/resources/oap/application/testng/KernelFixtureTest/application.fixture.conf
@@ -1,6 +1,6 @@
 boot.main = kernel-fixture-test
 services {
     kernel-fixture-test {
-        service.parameters.value = ${TEST_PORT}
+        service.parameters.value = ${PREFIXED_TEST_PORT}
     }
 }
