--- a/oap-stdlib/src/test/resources/oap/application/testng/KernelFixtureTest/oap-module.conf
+++ b/oap-stdlib/src/test/resources/oap/application/testng/KernelFixtureTest/oap-module.conf
@@ -1,2 +1,4 @@
 name = kernel-fixture-test
-services.fixture-service.implementation = "oap.application.testng.KernelFixtureTest$Service"
+services {
+    service.implementation = "oap.application.testng.KernelFixtureTest$Service"
+}
