profile name hack

--- a/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module-name-with-variable-fix.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module-name-with-variable-fix.conf
@@ -1,11 +1,10 @@
 name = module-name-with-variable-fix
 profile = [
-  ${VARIABLE}test1
-  ${VARIABLE2}-test1
+  test1
 ]
 services {
   module-profile {
-    profile: ${VARIABLE}test1
+    profile: test1
     implementation: "oap.application.KernelProfileTest$TestProfile1"
   }
 }
