add: Dates#incFixed

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -40,7 +40,10 @@ services {
       server = modules.this.oap-http-server
       backlog = 50
     }
-    supervision.thread = true
+    supervision {
+      supervise = true
+      thread = true
+    }
   }
 
   oap-http-listener-ssl {
