remoting: fix service name

--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/module.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/module.conf
@@ -1,6 +1,5 @@
-
-name = "oap-module-with-remoting"
-dependsOn = ["oap"]
+name = oap-module-with-remoting
+dependsOn = oap
 
 services {
   remote-service {
@@ -17,13 +16,22 @@ services {
     }
   }
 
+  remote-client2 {
+    implementation = oap.application.remote.RemoteClient
+    remote {
+      url = "http://localhost:8980/remote/"
+      name = modules.oap-module-with-remoting.remote-service
+      serialization = JSON
+      retry = 5
+    }
+  }
+
   remote-client-unreachable {
     implementation = oap.application.remote.RemoteClient
     remote {
       url = "http://localhost:8981/remote/"
-      name = remote-service
+      name = modules.oap-module-with-remoting.remote-service
       serialization = JSON
     }
   }
-
 }
