add: AbstractKernelFixture#withProfile

--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/cons-field-diff-types.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/cons-field-diff-types.conf
@@ -2,7 +2,7 @@
   name = cons-field-diff-types
   services {
     m {
-      implementation = "oap.application.KernelLinkImplementationsTest$TestList"
+      implementation = oap.application.KernelLinkImplementationsTest.TestList
       parameters {
         list = [a,b,c]
       }
