json-ext.yaml -> json-ext.conf

--- a/oap-stdlib/src/test/resources/META-INF/json-ext.conf
+++ b/oap-stdlib/src/test/resources/META-INF/json-ext.conf
@@ -1,6 +1,6 @@
 ext = [
   {
-    class = oap.json.ext.ExtDeserializerTest$Bean
+    class = oap.json.ext.ExtDeserializerTest.Bean
     field = ext
     implementation = oap.json.ext.ExtDeserializerTest.TestExt
   }
