--- a/pom.xml
+++ b/pom.xml
@@ -58,30 +58,38 @@
         </repository>
     </repositories>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+    </dependencies>
+    
     <properties>
-        <oap.project.version>9.14.1</oap.project.version>
+        <oap.project.version>9.14.2</oap.project.version>
 
 
         <oap.deps.testng.version>7.4.0</oap.deps.testng.version>
-        <oap.deps.assertj.version>3.19.0</oap.deps.assertj.version>
+        <oap.deps.assertj.version>3.20.2</oap.deps.assertj.version>
         <oap.deps.mockserver-netty.version>5.8.0</oap.deps.mockserver-netty.version>
 
-        <oap.deps.guava.version>30.1-jre</oap.deps.guava.version>
+        <oap.deps.guava.version>30.1.1-jre</oap.deps.guava.version>
 
         <oap.deps.logback.version>1.2.3</oap.deps.logback.version>
         <oap.deps.slf4j.version>1.7.30</oap.deps.slf4j.version>
 
-        <oap.deps.apache.httpcomponents.version>4.4.13</oap.deps.apache.httpcomponents.version>
-        <oap.deps.apache.httpclient.version>4.5.12</oap.deps.apache.httpclient.version>
+        <oap.deps.apache.httpcomponents.version>4.4.14</oap.deps.apache.httpcomponents.version>
+        <oap.deps.apache.httpclient.version>4.5.13</oap.deps.apache.httpclient.version>
         <oap.deps.apache.httpasyncclient.version>4.1.4</oap.deps.apache.httpasyncclient.version>
-        <oap.deps.apache.httpmime.version>4.5.11</oap.deps.apache.httpmime.version>
-        <oap.deps.apache.configuration.version>2.6</oap.deps.apache.configuration.version>
+        <oap.deps.apache.httpmime.version>4.5.13</oap.deps.apache.httpmime.version>
+        <oap.deps.apache.configuration.version>2.7</oap.deps.apache.configuration.version>
 
-        <oap.deps.apache.lang.version>3.11</oap.deps.apache.lang.version>
+        <oap.deps.apache.lang.version>3.12.0</oap.deps.apache.lang.version>
         <oap.deps.apache.commons.text.version>1.9</oap.deps.apache.commons.text.version>
-        <oap.deps.apache.compress.version>1.20</oap.deps.apache.compress.version>
+        <oap.deps.apache.compress.version>1.21</oap.deps.apache.compress.version>
         <oap.deps.apache.collections.version>4.4</oap.deps.apache.collections.version>
-        <oap.deps.apache.io.version>2.6</oap.deps.apache.io.version>
+        <oap.deps.apache.io.version>2.11.0</oap.deps.apache.io.version>
 
         <oap.deps.joda.version>2.10.10</oap.deps.joda.version>
 
@@ -92,11 +100,11 @@
         <oap.deps.lombok.version>1.18.20</oap.deps.lombok.version>
 
         <oap.deps.jamm.version>0.3.5</oap.deps.jamm.version>
-        <oap.deps.micrometer.version>1.6.4</oap.deps.micrometer.version>
-        <oap.deps.fastutil.version>8.3.1</oap.deps.fastutil.version>
+        <oap.deps.micrometer.version>1.7.2</oap.deps.micrometer.version>
+        <oap.deps.fastutil.version>8.5.4</oap.deps.fastutil.version>
         <oap.deps.quartz.version>2.3.2</oap.deps.quartz.version>
-        <oap.deps.fop.version>2.1.0</oap.deps.fop.version>
-        <oap.deps.lz4.version>1.7.0</oap.deps.lz4.version>
+        <oap.deps.fop.version>2.1.2</oap.deps.fop.version>
+        <oap.deps.lz4.version>1.8.0</oap.deps.lz4.version>
         <oap.deps.fst.version>2.57</oap.deps.fst.version>
         <oap.deps.guava-retrying.version>2.0.0</oap.deps.guava-retrying.version>
         <oap.deps.javax.activation.version>1.1.1</oap.deps.javax.activation.version>
@@ -104,17 +112,17 @@
 
         <oap.deps.maven.plexus-utils.version>3.3.0</oap.deps.maven.plexus-utils.version>
         <oap.deps.maven.plugin-build-helper.version>1.10</oap.deps.maven.plugin-build-helper.version>
-        <oap.deps.maven.plugin-api.version>3.6.3</oap.deps.maven.plugin-api.version>
+        <oap.deps.maven.plugin-api.version>3.8.1</oap.deps.maven.plugin-api.version>
         <oap.deps.maven.version>3.0-alpha-2</oap.deps.maven.version>
-        <oap.deps.maven.plugin-annotations.version>3.6.0</oap.deps.maven.plugin-annotations.version>
+        <oap.deps.maven.plugin-annotations.version>3.6.1</oap.deps.maven.plugin-annotations.version>
         <oap.deps.maven.plugin-plugin.version>3.6.0</oap.deps.maven.plugin-plugin.version>
         <oap.deps.plugins.antlr4.version>4.8-1</oap.deps.plugins.antlr4.version>
 
-        <oap.deps.aws-java-sdk.version>1.11.683</oap.deps.aws-java-sdk.version>
-        <oap.deps.s3mock.version>0.2.5</oap.deps.s3mock.version>
+        <oap.deps.aws-java-sdk.version>1.12.29</oap.deps.aws-java-sdk.version>
+        <oap.deps.s3mock.version>0.2.6</oap.deps.s3mock.version>
 
         <oap.deps.slack-api.version>v1.2.0.RELEASE</oap.deps.slack-api.version>
 
-        <oap.deps.undertow.version>2.2.4.Final</oap.deps.undertow.version>
+        <oap.deps.undertow.version>2.2.9.Final</oap.deps.undertow.version>
     </properties>
 </project>
