kernel: add functions( path, url, classpath, str)

--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/beanFromClasspath.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/beanFromClasspath.conf
@@ -1,10 +1,10 @@
-name = beanFromString
+name = beanFromClasspath
 services {
   service3 {
     implementation = oap.application.KernelTest.Service3
     parameters {
       name = a
-      service3 = "str({name = b()})"
+      service3 = classpath(/oap/application/KernelTest/beanFromClasspathFile.conf)
     }
   }
 }
