--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/beanFromPath.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/beanFromPath.conf
@@ -1,10 +1,10 @@
-name = beanFromResourcePath
+name = beanFromPath
 services {
   service3 {
     implementation = oap.application.KernelTest.Service3
     parameters {
       name = a
-      service3 = /oap/application/KernelTest/beanFromResourcePathFile.conf
+      service3 = path( ${TEST_PATH}/beanFromPathFile.conf )
     }
   }
 }
