--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,4 +55,4 @@ jobs:
         distribution: 'adopt'
         java-version: ${{ matrix.java }}
     - name: Build with Maven
-      run: mvn install -B -ntp # -X -V for debugging
+      run: mvn install -B -ntp -T 2C # -X -V for debugging
