SIFT-506 Define TemplateAccumulatorString as a service.

--- a/oap-template/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-template/src/main/resources/META-INF/oap-module.yaml
@@ -8,3 +8,6 @@ services:
     supervision:
       schedule: true
       cron: "10 20 */2 * * ? *"
+
+  template-accumulator-string:
+    implementation: oap.template.TemplateAccumulatorString
