SIFT-506 Define TemplateAccumulatorString as a service in .conf file

--- a/oap-template/src/main/resources/META-INF/oap-module.conf
+++ b/oap-template/src/main/resources/META-INF/oap-module.conf
@@ -11,4 +11,8 @@ services {
       cron = "10 20 */2 * * ? *"
     }
   }
+
+  template-accumulator-string {
+    implementation = oap.template.TemplateAccumulatorString
+  }
 }
