--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>8.6.20</oap.project.version>
+        <oap.project.version>8.6.21-oap8</oap.project.version>
 
 
         <oap.deps.testng.version>7.4.0</oap.deps.testng.version>
