--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
     </dependencies>
     
     <properties>
-        <oap.project.version>9.16.6</oap.project.version>
+        <oap.project.version>9.16.7</oap.project.version>
 
 
         <oap.deps.testng.version>7.4.0</oap.deps.testng.version>
@@ -116,7 +116,7 @@
         <oap.deps.maven.version>3.0-alpha-2</oap.deps.maven.version>
         <oap.deps.maven.plugin-annotations.version>3.6.1</oap.deps.maven.plugin-annotations.version>
         <oap.deps.maven.plugin-plugin.version>3.6.0</oap.deps.maven.plugin-plugin.version>
-        <oap.deps.plugins.antlr4.version>4.8-1</oap.deps.plugins.antlr4.version>
+        <oap.deps.plugins.antlr4.version>4.9.2</oap.deps.plugins.antlr4.version>
 
         <oap.deps.aws-java-sdk.version>1.12.29</oap.deps.aws-java-sdk.version>
         <oap.deps.s3mock.version>0.2.6</oap.deps.s3mock.version>
