ApacheHttpServer#keepaliveTimeout -> ApacheHttpServer#soTimeout PlainHttpListener#timeout -> PlainHttpListener#soTimeout

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -20,7 +20,7 @@ services {
       workers = 500
       queueSize = 0
       registerStatic = false
-      keepAliveTimeout = 2s
+      soTimeout = 2s
       originalServer = "OAP Server/4.0"
       responseDate = true
       healthHttpHandler = modules.this.oap-http-health-handler
@@ -38,6 +38,7 @@ services {
     parameters {
       server = modules.this.oap-http-server
       backlog = 50
+      soTimeout = 1s
     }
     supervision {
       supervise = true
