--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -36,6 +36,7 @@ services {
     profile = http-plain
     implementation = oap.http.server.apache.PlainHttpListener
     parameters {
+      affinity = []
       server = modules.this.oap-http-server
       backlog = 50
       soTimeout = 1s
