--- a/pom.xml
+++ b/pom.xml
@@ -67,17 +67,17 @@
     </dependencies>
 
     <properties>
-        <oap.project.version>17.9.18.6</oap.project.version>
+        <oap.project.version>17.9.18.7</oap.project.version>
 
 
         <oap.deps.testng.version>7.4.0</oap.deps.testng.version>
-        <oap.deps.assertj.version>3.20.2</oap.deps.assertj.version>
+        <oap.deps.assertj.version>3.21.0</oap.deps.assertj.version>
         <oap.deps.mockserver-netty.version>5.11.2</oap.deps.mockserver-netty.version>
 
-        <oap.deps.guava.version>30.1-jre</oap.deps.guava.version>
+        <oap.deps.guava.version>31.0.1-jre</oap.deps.guava.version>
 
-        <oap.deps.logback.version>1.2.3</oap.deps.logback.version>
-        <oap.deps.slf4j.version>1.7.30</oap.deps.slf4j.version>
+        <oap.deps.logback.version>1.2.6</oap.deps.logback.version>
+        <oap.deps.slf4j.version>1.7.32</oap.deps.slf4j.version>
 
         <oap.deps.apache.httpcomponents.version>4.4.14</oap.deps.apache.httpcomponents.version>
         <oap.deps.apache.httpclient.version>4.5.13</oap.deps.apache.httpclient.version>
@@ -91,26 +91,26 @@
         <oap.deps.apache.collections.version>4.4</oap.deps.apache.collections.version>
         <oap.deps.apache.io.version>2.11.0</oap.deps.apache.io.version>
 
-        <oap.deps.joda.version>2.10.10</oap.deps.joda.version>
+        <oap.deps.joda.version>2.10.13</oap.deps.joda.version>
 
-        <oap.deps.jackson.version>2.12.1</oap.deps.jackson.version>
+        <oap.deps.jackson.version>2.13.0</oap.deps.jackson.version>
         <oap.deps.jackson-dataformat-hocon.version>1.1.0</oap.deps.jackson-dataformat-hocon.version>
         <oap.deps.typesafe-config.version>1.4.1</oap.deps.typesafe-config.version>
 
-        <oap.deps.lombok.version>1.18.20</oap.deps.lombok.version>
+        <oap.deps.lombok.version>1.18.22</oap.deps.lombok.version>
 
         <oap.deps.jamm.version>0.3.5</oap.deps.jamm.version>
         <oap.deps.micrometer.version>1.6.9</oap.deps.micrometer.version>
-        <oap.deps.fastutil.version>8.5.4</oap.deps.fastutil.version>
+        <oap.deps.fastutil.version>8.5.6</oap.deps.fastutil.version>
         <oap.deps.quartz.version>2.3.2</oap.deps.quartz.version>
-        <oap.deps.fop.version>2.1.2</oap.deps.fop.version>
+        <oap.deps.fop.version>2.2.0</oap.deps.fop.version>
         <oap.deps.lz4.version>1.8.0</oap.deps.lz4.version>
         <oap.deps.fst.version>3.0.3</oap.deps.fst.version>
         <oap.deps.guava-retrying.version>2.0.0</oap.deps.guava-retrying.version>
         <oap.deps.javax.activation.version>1.1.1</oap.deps.javax.activation.version>
         <oap.deps.disruptor.version>1.2.19</oap.deps.disruptor.version>
 
-        <oap.deps.maven.plexus-utils.version>3.3.0</oap.deps.maven.plexus-utils.version>
+        <oap.deps.maven.plexus-utils.version>3.4.1</oap.deps.maven.plexus-utils.version>
         <oap.deps.maven.plugin-build-helper.version>1.10</oap.deps.maven.plugin-build-helper.version>
         <oap.deps.maven.plugin-api.version>3.8.1</oap.deps.maven.plugin-api.version>
         <oap.deps.maven.version>3.0-alpha-2</oap.deps.maven.version>
@@ -123,6 +123,7 @@
 
         <oap.deps.slack-api.version>v1.2.0.RELEASE</oap.deps.slack-api.version>
 
-        <oap.deps.undertow.version>2.2.9.Final</oap.deps.undertow.version>
+        <oap.deps.undertow.version>2.2.12.Final</oap.deps.undertow.version>
+        <oap.deps.affinity>3.21ea82</oap.deps.affinity>
     </properties>
 </project>
