--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -325,6 +325,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${oap.deps.mockito.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>${oap.deps.apache.httpcomponents.version}</version>
