--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -14,7 +14,10 @@ services {
 
   oap-http-apache-server {
     implementation = oap.http.server.apache.ApacheHttpServer
-    profile = http
+    profiles = [
+      -nio
+      http
+    ]
     name = oap-http-server
     parameters {
       workers = 500
@@ -33,7 +36,10 @@ services {
   }
 
   oap-http-listener-plain {
-    profile = http-plain
+    profiles = [
+      -nio
+      http-plain
+    ]
     implementation = oap.http.server.apache.PlainHttpListener
     parameters {
       affinity = []
@@ -48,7 +54,10 @@ services {
   }
 
   oap-http-listener-ssl {
-    profile = http-ssl
+    profiles = [
+      -nio
+      http-ssl
+    ]
     implementation = oap.http.server.apache.SslHttpListener
     parameters {
       server = this.oap-http-server
@@ -59,7 +68,10 @@ services {
   }
 
   oap-http-listener-local {
-    profile = http-local
+    profiles = [
+      -nio
+      http-local
+    ]
     implementation = oap.http.server.apache.LocalHttpListener
     parameters {
       server = modules.this.oap-http-server
@@ -67,8 +79,20 @@ services {
     supervision.thread = true
   }
 
-  oap-http-health-handler {
+  oap-http-health-handler-bio {
+    name = oap-http-health-handler
+    profile = -nio
     implementation = oap.http.server.health.HealthHttpHandler
+    profile = http
+    parameters {
+      providers = []
+    }
+  }
+
+  oap-http-health-handler-nio {
+    name = oap-http-health-handler
+    profile = nio
+    implementation = oap.http.server.undertow.health.HealthHttpHandler
     profile = http
     parameters {
       providers = []
@@ -77,7 +101,10 @@ services {
 
   corsPolicy-generic {
     implementation = oap.http.cors.GenericCorsPolicy
-    profile = http
+    profiles = [
+      -nio
+      http
+    ]
     parameters {
       allowOrigin = "*"
       allowHeaders = "Content-type, Authorization, Set-cookie"
@@ -88,7 +115,10 @@ services {
 
   corsPolicy-subdomain {
     implementation = oap.http.cors.PatternCorsPolicy
-    profile = http
+    profiles = [
+      -nio
+      http
+    ]
     parameters {
       domainRegexp = "^[^:/]*\\.oaplatform\\.org$"
       allowHeaders = "Content-type, Authorization, Set-cookie, Cookie"
