--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -1,11 +1,11 @@
 {
   boot.main = oap-module-with-remoting
 
-  profiles = [remoting, http]
+  profiles = [remoting]
 
   services {
     oap {
-      remoting.parameters.port = 8980
+      oap-server.parameters.port = ${HTTP_PORT}
       remoting.parameters.serialization = JSON
       remoting.parameters.private_network = true
     }
