--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/module.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/module.conf
@@ -9,7 +9,7 @@ services {
   remote-client {
     implementation = oap.application.remote.RemoteClient
     remote {
-      url = "http://localhost:8980/remote/"
+      url = "http://localhost:"${HTTP_PORT}"/remote/"
       name = remote-service
       serialization = JSON
       retry = 5
@@ -19,17 +19,18 @@ services {
   remote-client2 {
     implementation = oap.application.remote.RemoteClient
     remote {
-      url = "http://localhost:8980/remote/"
+      url = "http://localhost:"${HTTP_PORT}"/remote/"
       name = modules.oap-module-with-remoting.remote-service
       serialization = JSON
       retry = 5
     }
   }
 
+  # error port
   remote-client-unreachable {
     implementation = oap.application.remote.RemoteClient
     remote {
-      url = "http://localhost:8981/remote/"
+      url = "http://localhost:0/remote/"
       name = modules.oap-module-with-remoting.remote-service
       serialization = JSON
     }
