--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -12,7 +12,7 @@ services {
     implementation = oap.time.JodaTimeService
   }
 
-  oap-server {
+  oap-http-server {
     implementation = oap.http.server.nio.NioHttpServer
     parameters {
 //      port = 8080
@@ -45,7 +45,7 @@ services {
     implementation = oap.application.remote.Remote
     profile = remoting
     parameters {
-      server = modules.this.oap-server
+      server = modules.this.oap-http-server
       context = /remote/
       serialization = DEFAULT
       kernel = kernel.self
