--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -5,7 +5,7 @@
 
   services {
     oap {
-      oap-server.parameters.port = ${HTTP_PORT}
+      oap-http-server.parameters.port = ${HTTP_PORT}
       remoting.parameters.serialization = JSON
       remoting.parameters.private_network = true
     }
