--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -34,6 +34,12 @@ services {
     supervision.supervise = true
   }
 
+  oap-prometheus-metrics {
+    profile = prometheus-metrics
+    implementation = oap.prometheus.PrometheusExporter
+    parameters.server = modules.this.oap-http-server
+  }
+
   oap-http-health-handler {
     implementation = oap.http.server.nio.health.HealthHttpHandler
     parameters {
