--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <oap.deps.mockito.version>4.0.0</oap.deps.mockito.version>
 
 
+        <oap.deps.okhttp.version>4.9.3</oap.deps.okhttp.version>
         <oap.deps.apache.httpcomponents.version>4.4.14</oap.deps.apache.httpcomponents.version>
         <oap.deps.apache.httpclient.version>4.5.13</oap.deps.apache.httpclient.version>
         <oap.deps.apache.httpasyncclient.version>4.1.4</oap.deps.apache.httpasyncclient.version>
