--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -12,88 +12,38 @@ services {
     implementation = oap.time.JodaTimeService
   }
 
-  oap-http-apache-server {
-    implementation = oap.http.server.apache.ApacheHttpServer
-    profile = http
-    name = oap-http-server
+  oap-http-server {
+    implementation = oap.http.server.nio.NioHttpServer
     parameters {
-      workers = 500
-      queueSize = 0
-      registerStatic = false
-      soTimeout = 2s
-      originalServer = "OAP Server/4.0"
-      responseDate = true
+//      port = 8080
+
+      backlog = -1
+      idleTimeout = -1
+      tcpNodelay = true
+      ioThreads = -1
+      workerThreads = -1
+      maxEntitySize = -1
+      maxParameters = -1
+      maxHeaders = -1
+      maxHeaderSize = -1
+      statistics = false
+      compressionSupport = true
+
       healthHttpHandler = modules.this.oap-http-health-handler
-      rejected {
-        code = 503
-        reason = "temporary overload"
-      }
     }
     supervision.supervise = true
   }
 
-  oap-http-listener-plain {
-    profile = http-plain
-    implementation = oap.http.server.apache.PlainHttpListener
-    parameters {
-      affinity = []
-      server = modules.this.oap-http-server
-      backlog = 50
-      soTimeout = 1s
-    }
-    supervision {
-      supervise = true
-      thread = true
-    }
-  }
-
-  oap-http-listener-ssl {
-    profile = http-ssl
-    implementation = oap.http.server.apache.SslHttpListener
-    parameters {
-      server = this.oap-http-server
-      keystoreLocation = "/etc/oap/keystore.jks"
-      keystorePassword = "changeit"
-    }
-    supervision.thread = true
-  }
-
-  oap-http-listener-local {
-    profile = http-local
-    implementation = oap.http.server.apache.LocalHttpListener
-    parameters {
-      server = modules.this.oap-http-server
-    }
-    supervision.thread = true
+  oap-prometheus-metrics {
+    profile = prometheus-metrics
+    implementation = oap.prometheus.PrometheusExporter
+    parameters.server = modules.this.oap-http-server
   }
 
   oap-http-health-handler {
-    implementation = oap.http.server.health.HealthHttpHandler
-    profile = http
+    implementation = oap.http.server.nio.health.HealthHttpHandler
     parameters {
       providers = []
-    }
-  }
-
-  corsPolicy-generic {
-    implementation = oap.http.cors.GenericCorsPolicy
-    profile = http
-    parameters {
-      allowOrigin = "*"
-      allowHeaders = "Content-type, Authorization, Set-cookie"
-      allowCredentials = true
-      allowMethods = [HEAD, POST, GET, PUT, DELETE, OPTIONS]
-    }
-  }
-
-  corsPolicy-subdomain {
-    implementation = oap.http.cors.PatternCorsPolicy
-    profile = http
-    parameters {
-      domainRegexp = "^[^:/]*\\.oaplatform\\.org$"
-      allowHeaders = "Content-type, Authorization, Set-cookie, Cookie"
-      allowCredentials = true
-      allowMethods = [HEAD, POST, GET, PUT, DELETE, OPTIONS]
     }
   }
 
@@ -101,11 +51,10 @@ services {
     implementation = oap.application.remote.Remote
     profile = remoting
     parameters {
-      //      port = 8980
+      server = modules.this.oap-http-server
       context = /remote/
       serialization = DEFAULT
       kernel = kernel.self
-      timeout = 1m
     }
     supervision.supervise = true
   }
