--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -45,6 +45,11 @@
             <version>${oap.deps.micrometer.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${oap.deps.okhttp.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
             <version>${oap.deps.apache.commons.text.version}</version>
@@ -322,6 +327,12 @@
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
             <version>${oap.deps.plugins.antlr4.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${oap.deps.mockito.version}</version>
         </dependency>
 
         <dependency>
