--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -13,9 +13,10 @@ services {
   }
 
   oap-http-server {
+    profile = http
     implementation = oap.http.server.nio.NioHttpServer
     parameters {
-//      port = 8080
+      //      port = 8080
 
       backlog = -1
       idleTimeout = -1
@@ -28,28 +29,37 @@ services {
       maxHeaderSize = -1
       statistics = false
       compressionSupport = true
-
-      healthHttpHandler = modules.this.oap-http-health-handler
     }
     supervision.supervise = true
   }
 
   oap-prometheus-metrics {
-    profile = prometheus-metrics
+    profiles = [
+      http
+      prometheus-metrics
+    ]
     implementation = oap.prometheus.PrometheusExporter
     parameters.server = modules.this.oap-http-server
   }
 
   oap-http-health-handler {
+    profile = http
     implementation = oap.http.server.nio.health.HealthHttpHandler
     parameters {
+      server = modules.this.oap-http-server
+      prefix = /healtz
       providers = []
     }
+
+    supervision.supervise = true
   }
 
   remoting {
     implementation = oap.application.remote.Remote
-    profile = remoting
+    profiles = [
+      http
+      remoting
+    ]
     parameters {
       server = modules.this.oap-http-server
       context = /remote/
