--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -1,13 +1,14 @@
-{
-  boot.main = oap-module-with-remoting
+boot.main = oap-module-with-remoting
 
-  profiles = [remoting]
+profiles = [
+  http
+  remoting
+]
 
-  services {
-    oap {
-      oap-http-server.parameters.port = ${HTTP_PORT}
-      remoting.parameters.serialization = JSON
-      remoting.parameters.private_network = true
-    }
+services {
+  oap {
+    oap-http-server.parameters.port = ${HTTP_PORT}
+    remoting.parameters.serialization = JSON
+    remoting.parameters.private_network = true
   }
 }
