--- a/oap-stdlib/src/test/resources/oap/http/server/nio/health/HealthHttpHandlerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/http/server/nio/health/HealthHttpHandlerTest/application.test.conf
@@ -1,4 +1,5 @@
 boot.main = oap-http-health-test
+profile = http
 services {
   oap.oap-http-server.parameters.port = ${TEST_HTTP_PORT}
   oap.oap-http-health-handler.parameters.secret = secret
