NioHttpServer#compressionSupport -> forceCompressionSupport

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -28,7 +28,7 @@ services {
       maxHeaders = -1
       maxHeaderSize = -1
       statistics = false
-      compressionSupport = true
+      forceCompressionSupport = false
     }
     supervision.supervise = true
   }
