NioHttpServer: options alwaysSetDate,alwaysSetKeepAlive

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -29,6 +29,9 @@ services {
       maxHeaderSize = -1
       statistics = false
       forceCompressionSupport = false
+
+      alwaysSetDate = true;
+      alwaysSetKeepAlive = true;
     }
     supervision.supervise = true
   }
