oap-messages: add kernel config

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -57,6 +57,48 @@ services {
     supervision.supervise = true
   }
 
+  oap-http-message-handler {
+    profiles = [
+      http
+      oap-message-server
+    ]
+    implementation = oap.message.MessageHttpHandler
+    parameters {
+      server = modules.this.oap-http-server
+      clientHashCacheSize = 1024
+      hashTtl = 6h
+      context = /messages
+      listeners = []
+
+//      controlStatePath = /opt/oap/messages/server
+    }
+    supervision.supervise = true
+  }
+
+  oap-http-message-sender {
+    profiles = [
+      http
+      oap-message-sender
+    ]
+    implementation = oap.message.MessageSender
+    parameters {
+      connectionTimeout = 30s
+      timeout = 5s
+      retryTimeout = 1s
+      diskSyncPeriod = 1m
+      memorySyncPeriod = 100
+      poolSize = -1
+      storageLockExpiration = 1h
+      port = 8080
+
+//      host = <unknown>
+      httpPrefix = /messages
+
+//      persistenceDirectory = /opt/oap/messages/sender
+    }
+    supervision.supervise = true
+  }
+
   remoting {
     implementation = oap.application.remote.Remote
     profiles = [
