oap-http-message-sender: fix profiles

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -76,10 +76,7 @@ services {
   }
 
   oap-http-message-sender {
-    profiles = [
-      http
-      oap-message-sender
-    ]
+    profile = oap-message-sender
     implementation = oap.message.MessageSender
     parameters {
       connectionTimeout = 30s
