--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -70,7 +70,7 @@ services {
       context = /messages
       listeners = []
 
-//      controlStatePath = /opt/oap/messages/server
+      //      controlStatePath = /opt/oap/messages/server
     }
     supervision.supervise = true
   }
@@ -84,14 +84,15 @@ services {
       retryTimeout = 1s
       diskSyncPeriod = 1m
       memorySyncPeriod = 100
+      keepAliveDuration = 30d
       poolSize = -1
       storageLockExpiration = 1h
       port = 8080
 
-//      host = <unknown>
+      //      host = <unknown>
       httpPrefix = /messages
 
-//      persistenceDirectory = /opt/oap/messages/sender
+      //      persistenceDirectory = /opt/oap/messages/sender
     }
     supervision.supervise = true
   }
