kernel: fix Java final field compile-time constant expression

--- a/oap-stdlib/src/test/resources/oap/message/MessageServerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/message/MessageServerTest/application.test.conf
@@ -14,6 +14,9 @@ services {
       port = ${TEST_HTTP_PORT}
       persistenceDirectory = ${TEST_DIRECTORY}/opt/oap/messages/sender
     }
-    oap-http-message-handler.parameters.controlStatePath = ${TEST_DIRECTORY}/opt/oap/messages/server
+    oap-http-message-handler.parameters {
+      controlStatePath = ${TEST_DIRECTORY}/opt/oap/messages/server
+      clientHashCacheSize = 2048
+    }
   }
 }
