add: MessageSender#globalIoRetryTimeout

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -82,6 +82,7 @@ services {
       connectionTimeout = 30s
       timeout = 5s
       retryTimeout = 1s
+      globalIoRetryTimeout = 1s
       diskSyncPeriod = 1m
       memorySyncPeriod = 100
       keepAliveDuration = 30d
