--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -20,6 +20,7 @@ services {
 
       backlog = -1
       idleTimeout = -1
+      readTimeout = 60s
       tcpNodelay = true
       ioThreads = -1
       workerThreads = -1
