--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@
                         <includes>
                             <include>com.squareup.okhttp3:okhttp</include>
                             <include>com.squareup.okio:okio</include>
+                            <include>org.jetbrains.kotlin:kotlin-runtime</include>
                         </includes>
                     </artifactSet>
                     <relocations>
@@ -160,6 +161,10 @@
                         <relocation>
                             <pattern>okio</pattern>
                             <shadedPattern>oap.okio</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>kotlin</pattern>
+                            <shadedPattern>oap.kotlin</shadedPattern>
                         </relocation>
                     </relocations>
                     <filters>
