ADN-589 removed profile for metrics (it should be starting always)

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -37,14 +37,6 @@ services {
     supervision.supervise = true
   }
 
-  oap-prometheus-metrics {
-    profiles = [
-      http
-    ]
-    implementation = oap.prometheus.PrometheusExporter
-    parameters.server = modules.this.oap-http-server
-  }
-
   oap-http-health-handler {
     profile = http
     implementation = oap.http.server.nio.health.HealthHttpHandler
@@ -113,7 +105,14 @@ services {
     supervision.supervise = true
   }
 
+  oap-prometheus-metrics {
+    profiles = prometheus
+    implementation = oap.prometheus.PrometheusExporter
+    parameters.server = modules.this.oap-http-server
+  }
+
   prometheus-jvm-exporter {
+    profiles = prometheus
     implementation = oap.prometheus.PrometheusJvmExporter
     parameters {
       enableClassLoaderMetrics = true
@@ -126,6 +125,7 @@ services {
   }
 
   prometheus-application-info-exporter {
+    profiles = prometheus
     implementation = oap.prometheus.PrometheusApplicationInfoExporter
     supervision.supervise = true
   }
