--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -43,6 +43,7 @@ services {
     parameters {
       server = modules.this.oap-http-server
       prefix = /healtz
+      port = 8081
       providers = []
     }
 
@@ -57,6 +58,7 @@ services {
     implementation = oap.message.MessageHttpHandler
     parameters {
       server = modules.this.oap-http-server
+      port = 8081
       clientHashCacheSize = 1024
       hashTtl = 6h
       context = /messages
@@ -108,7 +110,10 @@ services {
   oap-prometheus-metrics {
     profiles = prometheus
     implementation = oap.prometheus.PrometheusExporter
-    parameters.server = modules.this.oap-http-server
+    parameters {
+      port = 8081
+      server = modules.this.oap-http-server
+    }
   }
 
   prometheus-jvm-exporter {
