--- a/oap-stdlib/src/test/resources/oap/message/MessageServerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/message/MessageServerTest/application.test.conf
@@ -15,6 +15,7 @@ services {
       persistenceDirectory = ${TEST_DIRECTORY}/opt/oap/messages/sender
     }
     oap-http-message-handler.parameters {
+      port = ${TEST_HTTP_PORT}
       controlStatePath = ${TEST_DIRECTORY}/opt/oap/messages/server
       clientHashCacheSize = 2048
     }
