--- a/oap-stdlib/src/test/resources/oap/http/server/nio/health/HealthHttpHandlerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/http/server/nio/health/HealthHttpHandlerTest/application.test.conf
@@ -2,5 +2,8 @@ boot.main = oap-http-health-test
 profile = http
 services {
   oap.oap-http-server.parameters.port = ${TEST_HTTP_PORT}
-  oap.oap-http-health-handler.parameters.secret = secret
+  oap.oap-http-health-handler.parameters {
+    secret = secret
+    port = ${TEST_HTTP_PORT}
+  }
 }
