--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,5 +9,6 @@ version: 2
 updates:
   - package-ecosystem: "maven" # See documentation for possible values: https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file#package-ecosystem
     directory: "/" # Location of package manifests
+    open-pull-requests-limit: 10
     schedule:
       interval: "weekly"
