--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,3 @@
-<!--
-  ~ The MIT License (MIT)
-  ~
-  ~ Copyright (c) Open Application Platform Authors
-  ~
-  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
-  ~ of this software and associated documentation files (the "Software"), to deal
-  ~ in the Software without restriction, including without limitation the rights
-  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-  ~ copies of the Software, and to permit persons to whom the Software is
-  ~ furnished to do so, subject to the following conditions:
-  ~
-  ~ The above copyright notice and this permission notice shall be included in all
-  ~ copies or substantial portions of the Software.
-  ~
-  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-  ~ SOFTWARE.
-  -->
-
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -44,6 +20,7 @@
         <module>oap-alert-slack</module>
         <module>oap-fs</module>
         <module>oap-jpath</module>
+        <module>oap-pnio</module>
         <module>maven</module>
     </modules>
 
@@ -67,16 +44,16 @@
     </dependencies>
 
     <properties>
-        <oap.project.version>17.10.29.0</oap.project.version>
+        <oap.project.version>17.10.30.0</oap.project.version>
 
-        <oap.deps.testng.version>7.5</oap.deps.testng.version>
-        <oap.deps.assertj.version>3.21.0</oap.deps.assertj.version>
-        <oap.deps.mockserver-netty.version>5.11.2</oap.deps.mockserver-netty.version>
+        <oap.deps.testng.version>7.6.1</oap.deps.testng.version>
+        <oap.deps.assertj.version>3.23.1</oap.deps.assertj.version>
+        <oap.deps.mockserver-netty.version>5.14.0</oap.deps.mockserver-netty.version>
 
         <oap.deps.guava.version>31.1-jre</oap.deps.guava.version>
 
-        <oap.deps.logback.version>1.2.6</oap.deps.logback.version>
-        <oap.deps.slf4j.version>1.7.32</oap.deps.slf4j.version>
+        <oap.deps.logback.version>1.4.0</oap.deps.logback.version>
+        <oap.deps.slf4j.version>2.0.0</oap.deps.slf4j.version>
 
         <oap.deps.mockito.version>4.7.0</oap.deps.mockito.version>
 
