--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -439,10 +439,10 @@
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
                 </exclusion>
-                <exclusion>
-                    <groupId>com.github.java-json-tools</groupId>
-                    <artifactId>jackson-coreutils</artifactId>
-                </exclusion>
+<!--                <exclusion>-->
+<!--                    <groupId>com.github.java-json-tools</groupId>-->
+<!--                    <artifactId>jackson-coreutils</artifactId>-->
+<!--                </exclusion>-->
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>jackson-core</artifactId>
